// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleImg should render background color 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1000,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "height": 1000,
        "visibility": "hidden",
        "width": 100,
      }
    }
  />
  <div
    className="img className"
    style={
      Object {
        "background": "red",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "all 1s linear 0s",
        "width": "100%",
      }
    }
  />
</span>
`;

exports[`SimpleImg should render correctly 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1000,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "height": 1000,
        "visibility": "hidden",
        "width": 100,
      }
    }
  />
  <div
    className="img className"
    style={
      Object {
        "background": "white",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "all 1s linear 0s",
        "width": "100%",
      }
    }
  />
</span>
`;

exports[`SimpleImg should render only span when place holder src is not supplied 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1000,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "height": 1000,
        "visibility": "hidden",
        "width": 100,
      }
    }
  />
  <div
    className="img className"
    style={
      Object {
        "background": "white",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "all 1s linear 0s",
        "width": "100%",
      }
    }
  />
</span>
`;

exports[`SimpleImg should render out as image data 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1000,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image//test"
    srcSet=""
    style={
      Object {
        "height": 1000,
        "width": 100,
      }
    }
  />
  <img
    alt="alt"
    className="img className"
    sizes="sizes"
    src="data:image//test"
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "all 1s linear 0s",
        "width": "100%",
      }
    }
  />
</span>
`;

exports[`SimpleImg should render out placeholder as image 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1000,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="/test/image.jpg"
    srcSet=""
    style={
      Object {
        "height": 1000,
        "width": 100,
      }
    }
  />
  <img
    alt="alt"
    className="img className"
    sizes="sizes"
    src="/test/image.jpg"
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "all 1s linear 0s",
        "width": "100%",
      }
    }
  />
</span>
`;
